fixed logo on mobile view

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -118,7 +118,7 @@
 
   .navbar-logo {
     position: absolute;
-    top: 0;
+    top: 10px;
     left: 0;
   }
 
